statistics of participant attendance fronted

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -36,15 +36,15 @@ txt.ui.common.Back=Zpět
 txt.ui.common.Login=Přihlášení
 txt.ui.common.ToLogin=Přihlásit
 txt.ui.common.ToLogout=Odhlásit
-txt.ui.common.Username=Přihlašovací jméno
+txt.ui.common.Username=Uživatelské jméno
 txt.ui.common.password=Heslo
 txt.ui.common.ToDownloadApplication=Stáhnout přihlášku
 txt.ui.common.refreshData=Obnovit data
 txt.ui.common.name=Název
 txt.ui.common.description=Popis
 txt.ui.common.year=Rok
-txt.ui.common.participantCount=Počet účastníků
-txt.ui.common.lessonPerWeekCount=Počet lekcí týdně
+txt.ui.common.participantCount=Účastníků
+txt.ui.common.lessonPerWeekCount=Lekcí týdně
 txt.ui.common.new=Nový
 txt.ui.common.participants=Účastníci
 txt.ui.common.lessons=Lekce
@@ -72,7 +72,7 @@ txt.ui.common.all=Vše
 txt.ui.common.style=Styl
 txt.ui.common.distance=Vzdálenost (m)
 txt.ui.common.date=Datum
-txt.ui.common.resultTime=Výsledný čas
+txt.ui.common.resultTime=Čas
 txt.ui.common.result=Výsledek
 txt.ui.common.changePassword=Změna hesla
 txt.ui.common.enterActualPassword=Zadejte současné heslo
@@ -101,6 +101,7 @@ txt.ui.common.lessonProcessed=Lekce proběhla
 txt.ui.common.lessonDetail=Detail lekce
 txt.ui.common.description=Poznámka
 txt.ui.common.attendance=Docházka
+txt.ui.common.lessonAttendance=účast na hodinách
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -173,14 +174,14 @@ msg.ui.mail.text.newApplication.text2=Zástupce: {0}
 msg.ui.mail.subject.newUserAdmin=Nový účet
 msg.ui.mail.text.newUserAdmin.text0=Dobrý den,
 msg.ui.mail.text.newUserAdmin.text1=byl Vám zřízen přístup do aplikace www.pkbohumin.cz.
-msg.ui.mail.text.newUserAdmin.text2=Přihlašovací jméno: {0}
+msg.ui.mail.text.newUserAdmin.text2=Uživatelské jméno: {0}
 msg.ui.mail.text.newUserAdmin.text3=Heslo: {0}
 msg.ui.mail.text.newUserAdmin.text4=Tým Plaveckého klubu Bohumín.
 
 msg.ui.mail.subject.resetPassword=Reset hesla
 msg.ui.mail.text.reset.text0=Dobrý den,
 msg.ui.mail.text.reset.text1=byl proveden reset přístupového hesla do aplikace www.pkbohumin.cz.
-msg.ui.mail.text.reset.text2=Přihlašovací jméno: {0}
+msg.ui.mail.text.reset.text2=Uživatelské jméno: {0}
 msg.ui.mail.text.reset.text3=Nové heslo: {0}
 msg.ui.mail.text.reset.text4=Tým Plaveckého klubu Bohumín.
 
