TRAINER as new role

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -102,6 +102,7 @@ txt.ui.common.lessonDetail=Detail lekce
 txt.ui.common.description=Poznámka
 txt.ui.common.attendance=Docházka
 txt.ui.common.lessonAttendance=účast na hodinách
+txt.ui.common.swimingMeters=Uplavané metry
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -195,4 +196,5 @@ enum.DayOfWeek.SATURDAY=sobota
 enum.DayOfWeek.SUNDAY=neděle
 
 enum.ScbUserRole.USER=Uživatel
-enum.ScbUserRole.ADMIN=Trenér
+enum.ScbUserRole.ADMIN=Administrátor
+enum.ScbUserRole.TRAINER=Trenér
