change of course application, representative/user can have assigned more than one course participant

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -103,6 +103,7 @@ txt.ui.common.description=Poznámka
 txt.ui.common.attendance=Docházka
 txt.ui.common.lessonAttendance=účast na hodinách
 txt.ui.common.swimingMeters=Uplavané metry
+txt.ui.common.warning=Upozornění
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -147,6 +148,7 @@ msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
 msg.ui.quest.deleteItem.arg=Opravdu si přejete odstranit položku "{0}"?
 msg.ui.quest.deleteItem=Opravdu si přejete odstranit položku?
 msg.ui.quest.assignInCourseParticipant=Některý z účastníků je již přihlášen do jiného kurzu, chcete pokračovat?
+msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je již v systému registrováno. Předvyplnit údaje zákonného zástupce?
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška "{0}" byla odstraněna.
