part for course participant representatives

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -14,6 +14,7 @@ txt.ui.menu.courseDetail=Detail kurzu
 txt.ui.menu.courseList=Seznam kurzů
 txt.ui.menu.configuration=Nastavení
 txt.ui.menu.users=Uživatelé
+txt.ui.menu.user=Uživatel
 
 txt.ui.login=Přihlášení uživatele
 
@@ -104,6 +105,9 @@ txt.ui.common.attendance=Docházka
 txt.ui.common.lessonAttendance=účast na hodinách
 txt.ui.common.swimingMeters=Uplavané metry
 txt.ui.common.warning=Upozornění
+txt.ui.common.userParticipantData=Údaje uživatele / zákonného zástupce 
+txt.ui.common.dataBasic=Základní údaje 
+
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
