changes in mail attachment from participant representative application part

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -107,7 +107,7 @@ txt.ui.common.swimingMeters=Uplavané metry
 txt.ui.common.warning=Upozornění
 txt.ui.common.userParticipantData=Údaje uživatele / zákonného zástupce 
 txt.ui.common.dataBasic=Základní údaje 
-
+txt.ui.common.newCourseParticipant=Přihlásit nového účastníka 
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
