add informations about application functions to mail for new user

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -185,6 +185,15 @@ msg.ui.mail.text.newUserAdmin.text2=Uživatelské jméno: {0}
 msg.ui.mail.text.newUserAdmin.text3=Heslo: {0}
 msg.ui.mail.text.newUserAdmin.text4=Tým Plaveckého klubu Bohumín.
 
+msg.ui.mail.text.newUser.text0=Aplikace Vám umožňí
+msg.ui.mail.text.newUser.text1=- přehled a aktualizaci údajů vašich přihlášených dětí
+msg.ui.mail.text.newUser.text2=- přihlášení dalšího dítěte do kurzu
+msg.ui.mail.text.newUser.text3=- přihlášení dítěte na nový ročník kurzu
+msg.ui.mail.text.newUser.text4=- přehled kurzů navštěvovaných dítětem včetně termínů lekcí
+msg.ui.mail.text.newUser.text5=- přehled přihlášek včetně uložení přihlášky do souboru pdf
+msg.ui.mail.text.newUser.text6=- přehled výsledků dětí
+msg.ui.mail.text.newUser.text7=- aktualizace vašich kontaktních údajů
+
 msg.ui.mail.subject.resetPassword=Reset hesla
 msg.ui.mail.text.reset.text0=Dobrý den,
 msg.ui.mail.text.reset.text1=byl proveden reset přístupového hesla do aplikace www.pkbohumin.cz.
