--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -178,21 +178,21 @@ msg.ui.mail.text.newApplication.text0=Prostřednictvím aplikace www.pkbohumin.c
 msg.ui.mail.text.newApplication.text1=Účastník (dítě): {0}
 msg.ui.mail.text.newApplication.text2=Zástupce: {0}
 
-msg.ui.mail.subject.newUserAdmin=Nový účet
+msg.ui.mail.subject.newUserAdmin=Přístup do aplikace Plaveckého klubu Bohumín
 msg.ui.mail.text.newUserAdmin.text0=Dobrý den,
-msg.ui.mail.text.newUserAdmin.text1=byl Vám zřízen přístup do aplikace www.pkbohumin.cz.
+msg.ui.mail.text.newUserAdmin.text1=byl Vám zřízen přístup do webové aplikace Plaveckého klubu Bohumín www.pkbohumin.cz/pages/common/login.zul
 msg.ui.mail.text.newUserAdmin.text2=Uživatelské jméno: {0}
 msg.ui.mail.text.newUserAdmin.text3=Heslo: {0}
 msg.ui.mail.text.newUserAdmin.text4=Tým Plaveckého klubu Bohumín.
 
-msg.ui.mail.text.newUser.text0=Aplikace Vám umožňí
-msg.ui.mail.text.newUser.text1=- přehled a aktualizaci údajů vašich přihlášených dětí
-msg.ui.mail.text.newUser.text2=- přihlášení dalšího dítěte do kurzu
-msg.ui.mail.text.newUser.text3=- přihlášení dítěte na nový ročník kurzu
-msg.ui.mail.text.newUser.text4=- přehled kurzů navštěvovaných dítětem včetně termínů lekcí
-msg.ui.mail.text.newUser.text5=- přehled přihlášek včetně uložení přihlášky do souboru pdf
-msg.ui.mail.text.newUser.text6=- přehled výsledků dětí
-msg.ui.mail.text.newUser.text7=- aktualizace vašich kontaktních údajů
+msg.ui.mail.text.newUser.text0=Po přihlášení Vám aplikace umožňuje
+msg.ui.mail.text.newUser.text1=- aktualizovat vaše kontaktní údaje a údaje vámi přihlášených dětí
+msg.ui.mail.text.newUser.text2=- přihlásit další dítě do kurzu
+msg.ui.mail.text.newUser.text3=- přihlásit dítě na nový ročník kurzu
+msg.ui.mail.text.newUser.text4=- přehled o kurzech navštěvovaných dítětem včetně termínů lekcí
+msg.ui.mail.text.newUser.text5=- přehled existujících přihlášek včetně stažení přihlášky do souboru pdf
+msg.ui.mail.text.newUser.text6=- přehled o výsledcích svých dětí
+msg.ui.mail.text.newUser.text7=Přejeme pěkný den.
 
 msg.ui.mail.subject.resetPassword=Reset hesla
 msg.ui.mail.text.reset.text0=Dobrý den,
