--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -17,6 +17,7 @@ txt.ui.menu.users=Uživatelé
 txt.ui.menu.user=Uživatel
 
 txt.ui.login=Přihlášení uživatele
+txt.ui.forgottenPassword=Zapomenuté heslo
 
 txt.ui.common.contact=Kontakt
 txt.ui.common.firstname=Jméno
@@ -108,6 +109,7 @@ txt.ui.common.warning=Upozornění
 txt.ui.common.userParticipantData=Údaje uživatele / zákonného zástupce 
 txt.ui.common.dataBasic=Základní údaje 
 txt.ui.common.newCourseParticipant=Přihlásit nového účastníka 
+txt.ui.common.forgottenPassword=Zapoměli jste heslo? 
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -145,6 +147,7 @@ msg.ui.validation.err.minPasswordlength=Minimální délka {0} znaků.
 msg.ui.validation.err.passwordNotDifferentThanPreviousOne=Neliší se od předchozího.
 msg.ui.validation.err.notContainsNumber=Neobsahuje žádné číslo.
 msg.ui.validation.err.notContainsCapitalLetter=Neobsahuje velké písmeno.
+msg.ui.validation.err.usernameNotExists=Neplatný Email/Uživatelské jméno.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku "{0}"?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz "{0}"?
@@ -167,6 +170,7 @@ msg.ui.warn.courseApplicationsNotAllowed=Přihlášky do plaveckého kurzu nejso
 msg.ui.info.userCreatedAdnSendMail=Uživatel {0} byl založen, na email {1} byla odeslána zpráva s přihlašovacími údaji.
 msg.ui.warn.userNotExistsInDB=Uživatel již v databázi neexistuje, obnovte prosím data na stránce.
 msg.ui.info.passwordResetAndSendToEmail=Heslo uživatele {0} resetováno a odesláno na email {1} .
+msg.ui.info.passwordResetAndSendToEmail2=Heslo uživatele {0} bylo resetováno a odesláno na zaregistrovaný email.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
