mail to parents about the end of season

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -205,6 +205,22 @@ msg.ui.mail.text.reset.text2=Uživatelské jméno: {0}
 msg.ui.mail.text.reset.text3=Nové heslo: {0}
 msg.ui.mail.text.reset.text4=Tým Plaveckého klubu Bohumín.
 
+# mail k zaveru sezony
+msg.ui.mail.endOfSeason.subject=Závěr sezóny 2016/2017
+msg.ui.mail.endOfSeason.text0=Dobrý den,
+msg.ui.mail.endOfSeason.text1=zasílám Vám informace k závěru sezóny 2016/2017:
+msg.ui.mail.endOfSeason.text2=- tréninky všech plaveckých skupin K, P, ZPB a ZPC končí dle rozvrhu v týdnu do pátku 16. června
+msg.ui.mail.endOfSeason.text3=- v úterý 20. června budou pro všechny výše zmiňované skupiny uspořádány klubové závody na bazénu v Bohumíně. Registrace 16:00-16:30, průběh 16:30-18:30
+msg.ui.mail.endOfSeason.text4=- skupina ZPA3 končí tréninkem ve čtvrtek 22. června v čase od 16:30-17:15
+msg.ui.mail.endOfSeason.text5=- skupiny ZPA1 a 2 končí v pátek 23. června společným tréninkem od 16:30 do 17:15
+msg.ui.mail.endOfSeason.text6=Informace k přihlášení na sezónu 2017/2018:
+msg.ui.mail.endOfSeason.text7=- v případě, že máte zájem aby Vaše dítě pokračovalo v plavání i příští školní rok, prosím o přihlášení do aplikace http://www.pkbohumin.cz/pages/common/login.zul a na řádku dítěte zmáčkněte Přihláška 2017/2018
+msg.ui.mail.endOfSeason.text8=- v případě zapomenutých přihlašovacích údajů použijte na stejné stránce odkaz ''Zapoměli jste heslo?''
+msg.ui.mail.endOfSeason.text9=- prosím o přihlášení do 30.6.2017
+msg.ui.mail.endOfSeason.text10=Za PK Bohumín přeji příjemně prožité letní dny 
+msg.ui.mail.endOfSeason.text11=S pozdravem
+msg.ui.mail.endOfSeason.text12=Adrian Kuder
+
 # Enums
 enum.DayOfWeek.MONDAY=pondělí
 enum.DayOfWeek.TUESDAY=úterý
