--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -48,6 +48,7 @@ txt.ui.common.year=Rok
 txt.ui.common.participantCount=Účastníků
 txt.ui.common.lessonPerWeekCount=Lekcí týdně
 txt.ui.common.new=Nový
+txt.ui.common.new2=Nová
 txt.ui.common.participants=Účastníci
 txt.ui.common.lessons=Lekce
 txt.ui.common.dayOfWeek=Den v týdnu
@@ -109,7 +110,7 @@ txt.ui.common.warning=Upozornění
 txt.ui.common.userParticipantData=Údaje uživatele / zákonného zástupce 
 txt.ui.common.dataBasic=Základní údaje 
 txt.ui.common.newCourseParticipant=Přihlásit nového účastníka 
-txt.ui.common.forgottenPassword=Zapoměli jste heslo? 
+txt.ui.common.forgottenPassword=Zapoměli jste heslo?
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -155,7 +156,7 @@ msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
 msg.ui.quest.deleteItem.arg=Opravdu si přejete odstranit položku "{0}"?
 msg.ui.quest.deleteItem=Opravdu si přejete odstranit položku?
 msg.ui.quest.assignInCourseParticipant=Některý z účastníků je již přihlášen do jiného kurzu, chcete pokračovat?
-msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je již v systému registrováno. Předvyplnit údaje zákonného zástupce?
+msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník nebo pro přihlášení dalšího dítětě zmáčknětě Přihlásit nového účastníka.
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška "{0}" byla odstraněna.
