notification to unregistered participant to next course

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -111,6 +111,8 @@ txt.ui.common.userParticipantData=Údaje uživatele / zákonného zástupce
 txt.ui.common.dataBasic=Základní údaje 
 txt.ui.common.newCourseParticipant=Přihlásit nového účastníka 
 txt.ui.common.forgottenPassword=Zapoměli jste heslo?
+txt.ui.common.unregisteredFrom=Nepřihlášeni z 
+txt.ui.common.sendWarnMail=Odeslat upozorňující mail 
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -175,6 +177,9 @@ msg.ui.warn.userNotExistsInDB=Uživatel již v databázi neexistuje, obnovte pro
 msg.ui.info.passwordResetAndSendToEmail=Heslo uživatele {0} resetováno a odesláno na email {1} .
 msg.ui.info.passwordResetAndSendToEmail2=Heslo uživatele {0} bylo resetováno a odesláno na zaregistrovaný email.
 
+msg.ui.quest.sendMailToUnregisteredParticipant=Odeslat upozorňující mail pro {0} neprodloužených přihlášek?
+msg.ui.title.sendMail=Odeslání mailu.
+
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
 msg.ui.mail.courseApplication.text1=děkujeme za podání přihlášky.
@@ -223,6 +228,14 @@ msg.ui.mail.endOfSeason.text9=- prosím o přihlášení do 30.6.2017
 msg.ui.mail.endOfSeason.text10=Za PK Bohumín přeji příjemně prožité letní dny 
 msg.ui.mail.endOfSeason.text11=S pozdravem
 msg.ui.mail.endOfSeason.text12=Adrian Kuder
+
+# mail neprihlaseni z predchozi sezony
+msg.ui.mail.unregisteredToCurrSeason.subject=Přihláška na ročník {0}
+msg.ui.mail.unregisteredToCurrSeason.text0=Dobrý den,
+msg.ui.mail.unregisteredToCurrSeason.text1=v případě, že máte zájem aby Vaše dítě {0} pokračovalo v plavání i příští školní rok, prosím o přihlášení do aplikace http://www.pkbohumin.cz/pages/common/login.zul a na řádku dítěte zmáčkněte Přihláška {1}.
+msg.ui.mail.unregisteredToCurrSeason.text2=V případě zapomenutých přihlašovacích údajů použijte na stejné stránce odkaz ''Zapoměli jste heslo?''
+msg.ui.mail.unregisteredToCurrSeason.text3=S pozdravem
+msg.ui.mail.unregisteredToCurrSeason.text4=Tým Plaveckého klubu Bohumín.
 
 # Enums
 enum.DayOfWeek.MONDAY=pondělí
