create page and vm for register participant with link

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -162,6 +162,7 @@ msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je
 msg.ui.quest.participantPersonalNoExists=Rodné číslo {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník.
 msg.ui.quest.participantPersonalNoExists2=Rodné číslo {0} je již v systému registrováno. 
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
+msg.ui.info.applicationForParticipantCreated=Přihláška účastníka {0} na ročník {1}/{2} byla úspěšně založena. Na emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška "{0}" byla odstraněna.
 msg.ui.info.courseDeleted=Kurz "{0}" byl odstraněn.
@@ -176,9 +177,10 @@ msg.ui.info.userCreatedAdnSendMail=Uživatel {0} byl založen, na email {1} byla
 msg.ui.warn.userNotExistsInDB=Uživatel již v databázi neexistuje, obnovte prosím data na stránce.
 msg.ui.info.passwordResetAndSendToEmail=Heslo uživatele {0} resetováno a odesláno na email {1} .
 msg.ui.info.passwordResetAndSendToEmail2=Heslo uživatele {0} bylo resetováno a odesláno na zaregistrovaný email.
-
 msg.ui.quest.sendMailToUnregisteredParticipant=Odeslat upozorňující mail pro {0} neprodloužených přihlášek?
 msg.ui.title.sendMail=Odeslání mailu.
+msg.ui.error.invalidRequest=Neplatný požadavek.
+msg.ui.warn.userHaveRegisteredToCourse=Účastník {0} je již přihlášen do ročníku {1}/{2}. 
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
