--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -162,7 +162,7 @@ msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je
 msg.ui.quest.participantPersonalNoExists=Rodné číslo {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník.
 msg.ui.quest.participantPersonalNoExists2=Rodné číslo {0} je již v systému registrováno. 
 msg.ui.info.applicationSend=Přihláška do klubu byla úspěšně odeslána. Na zadanou primární emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
-msg.ui.info.applicationForParticipantCreated=Přihláška účastníka {0} na ročník {1}/{2} byla úspěšně založena. Na emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
+msg.ui.info.applicationForParticipantCreated=Účastník {0} byl úspěšně přihlášen do ročníku {1}/{2}. Na Vaši emailovou adresu byl odeslán potvrzující email s přiloženou přihláškou.
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška "{0}" byla odstraněna.
 msg.ui.info.courseDeleted=Kurz "{0}" byl odstraněn.
@@ -234,8 +234,8 @@ msg.ui.mail.endOfSeason.text12=Adrian Kuder
 # mail neprihlaseni z predchozi sezony
 msg.ui.mail.unregisteredToCurrSeason.subject=Přihláška na ročník {0}
 msg.ui.mail.unregisteredToCurrSeason.text0=Dobrý den,
-msg.ui.mail.unregisteredToCurrSeason.text1=v případě, že máte zájem aby Vaše dítě {0} pokračovalo v plavání i příští školní rok, prosím o přihlášení do aplikace http://www.pkbohumin.cz/pages/common/login.zul a na řádku dítěte zmáčkněte Přihláška {1}.
-msg.ui.mail.unregisteredToCurrSeason.text2=V případě zapomenutých přihlašovacích údajů použijte na stejné stránce odkaz ''Zapoměli jste heslo?''
+msg.ui.mail.unregisteredToCurrSeason.text1=v případě, že máte zájem aby Vaše dítě {0} pokračovalo v plavání i příští školní rok, prosím klikněte na odkaz níže, kterým provedete přihlášení dítěte.
+msg.ui.mail.unregisteredToCurrSeason.text2=http://www.pkbohumin.cz/pages/public/prihlaska-ucastnik-pokracovani.zul?courseParticipant={0}&courseParticRepresentative={1}
 msg.ui.mail.unregisteredToCurrSeason.text3=S pozdravem
 msg.ui.mail.unregisteredToCurrSeason.text4=Tým Plaveckého klubu Bohumín.
 
