payments, db, domain, dao, service

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -112,7 +112,10 @@ txt.ui.common.dataBasic=Základní údaje
 txt.ui.common.newCourseParticipant=Přihlásit nového účastníka 
 txt.ui.common.forgottenPassword=Zapoměli jste heslo?
 txt.ui.common.unregisteredFrom=Nepřihlášeni z 
-txt.ui.common.sendWarnMail=Odeslat upozorňující mail 
+txt.ui.common.sendWarnMail=Odeslat upozorňující mail
+txt.ui.common.priceSemester1=Cena I. pololetí
+txt.ui.common.priceSemester2=Cena II. pololetí
+txt.ui.common.CZK=Kč
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
