payment list and detail

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -116,6 +116,12 @@ txt.ui.common.sendWarnMail=Odeslat upozorňující mail
 txt.ui.common.priceSemester1=Cena I. pololetí
 txt.ui.common.priceSemester2=Cena II. pololetí
 txt.ui.common.CZK=Kč
+txt.ui.common.Payments=Platby
+txt.ui.common.ParticipantPayments=Platby účastníka {0} za kurz {1}
+txt.ui.common.Amount=Částka
+txt.ui.common.Type=Druh
+txt.ui.common.NewPayment=Nová platba
+txt.ui.common.PaymentDetail=Detail platby
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -254,3 +260,8 @@ enum.DayOfWeek.SUNDAY=neděle
 enum.ScbUserRole.USER=Uživatel
 enum.ScbUserRole.ADMIN=Administrátor
 enum.ScbUserRole.TRAINER=Trenér
+
+enum.PaymentType.CASH=Hotovost
+enum.PaymentType.BANK_TRANS=Bankovní převod
+enum.PaymentType.DONATE=Sponzorský dar
+enum.PaymentType.OTHER=Jiný
