--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -164,6 +164,7 @@ msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku "{0}"?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz "{0}"?
 msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
+msg.ui.quest.deletePayment=Opravdu si přejete odstranit platbu "{0}" Kč?
 msg.ui.quest.deleteItem.arg=Opravdu si přejete odstranit položku "{0}"?
 msg.ui.quest.deleteItem=Opravdu si přejete odstranit položku?
 msg.ui.quest.assignInCourseParticipant=Některý z účastníků je již přihlášen do jiného kurzu, chcete pokračovat?
@@ -176,6 +177,7 @@ msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška "{0}" byla odstraněna.
 msg.ui.info.courseDeleted=Kurz "{0}" byl odstraněn.
 msg.ui.info.userDeleted=Uživatel "{0}" byl odstraněn.
+msg.ui.info.paymentDeleted=Platba "{0}" Kč byla odstraněna.
 msg.ui.info.itemDeleted=Položka byla odstraněna.
 msg.ui.info.itemDeleted.arg=Položka "{0}" byla odstraněna.
 msg.ui.info.passwordChanged=Heslo bylo změněno.
