change in params for load and save payment

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -117,11 +117,12 @@ txt.ui.common.priceSemester1=Cena I. pololetí
 txt.ui.common.priceSemester2=Cena II. pololetí
 txt.ui.common.CZK=Kč
 txt.ui.common.Payments=Platby
-txt.ui.common.ParticipantPayments=Platby účastníka {0} za kurz {1}
 txt.ui.common.Amount=Částka
 txt.ui.common.Type=Druh
+txt.ui.common.Processed=Zpracováno
 txt.ui.common.NewPayment=Nová platba
 txt.ui.common.PaymentDetail=Detail platby
+txt.ui.common.ParticipantPayments= Platby {0}, kurz {1}
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -267,3 +268,6 @@ enum.PaymentType.CASH=Hotovost
 enum.PaymentType.BANK_TRANS=Bankovní převod
 enum.PaymentType.DONATE=Sponzorský dar
 enum.PaymentType.OTHER=Jiný
+
+enum.PaymentProcessType.AUTOMATIC=Automaticky
+enum.PaymentProcessType.MANUAL=Manuálně
