--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -123,6 +123,8 @@ txt.ui.common.Processed=Zpracováno
 txt.ui.common.NewPayment=Nová platba
 txt.ui.common.PaymentDetail=Detail platby
 txt.ui.common.ParticipantPayments= Platby {0}, kurz {1}
+txt.ui.common.State=Stav
+txt.ui.common.PayedSum=Zaplaceno celkem
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -271,3 +273,10 @@ enum.PaymentType.OTHER=Jiný
 
 enum.PaymentProcessType.AUTOMATIC=Automaticky
 enum.PaymentProcessType.MANUAL=Manuálně
+
+enum.CoursePaymentState.NO_PAYMENT=Žádná pltba
+enum.CoursePaymentState.SEMESTER_FIRST_PARTLY=Částečně první pololetí
+enum.CoursePaymentState.SEMESTER_FIRST_PAYED=Zaplaceno první pololetí
+enum.CoursePaymentState.SEMESTER_SECOND_PARTLY=Částečně druhé pololetí
+enum.CoursePaymentState.SEMESTER_SECOND_PAYED=Zaplaceno druhé pololetí
+enum.CoursePaymentState.OVERPAYED=Přeplaceno
