course payment summary

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -113,8 +113,10 @@ txt.ui.common.newCourseParticipant=Přihlásit nového účastníka
 txt.ui.common.forgottenPassword=Zapoměli jste heslo?
 txt.ui.common.unregisteredFrom=Nepřihlášeni z 
 txt.ui.common.sendWarnMail=Odeslat upozorňující mail
-txt.ui.common.priceSemester1=Cena I. pololetí
-txt.ui.common.priceSemester2=Cena II. pololetí
+txt.ui.common.priceSemester1=Cena první pololetí
+txt.ui.common.priceSemester2=Cena druhé pololetí
+txt.ui.common.Semester1=První pololetí
+txt.ui.common.Semester2=Druhé pololetí
 txt.ui.common.CZK=Kč
 txt.ui.common.Payments=Platby
 txt.ui.common.Amount=Částka
@@ -124,7 +126,10 @@ txt.ui.common.NewPayment=Nová platba
 txt.ui.common.PaymentDetail=Detail platby
 txt.ui.common.ParticipantPayments= Platby {0}, kurz {1}
 txt.ui.common.State=Stav
-txt.ui.common.PayedSum=Zaplaceno celkem
+txt.ui.common.Summary=Souhrn
+txt.ui.common.Sum=Celkem
+txt.ui.common.Overpayed=Přeplaceno
+txt.ui.common.ToPay=zbývá doplatit
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -274,9 +279,6 @@ enum.PaymentType.OTHER=Jiný
 enum.PaymentProcessType.AUTOMATIC=Automaticky
 enum.PaymentProcessType.MANUAL=Manuálně
 
-enum.CoursePaymentState.NO_PAYMENT=Žádná pltba
-enum.CoursePaymentState.SEMESTER_FIRST_PARTLY=Částečně první pololetí
-enum.CoursePaymentState.SEMESTER_FIRST_PAYED=Zaplaceno první pololetí
-enum.CoursePaymentState.SEMESTER_SECOND_PARTLY=Částečně druhé pololetí
-enum.CoursePaymentState.SEMESTER_SECOND_PAYED=Zaplaceno druhé pololetí
-enum.CoursePaymentState.OVERPAYED=Přeplaceno
+enum.CoursePaymentState.NO_PAYMENT=žádná platba
+enum.CoursePaymentState.PARTLY=částečně zaplaceno
+enum.CoursePaymentState.PAYED=zaplaceno
