--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -46,6 +46,16 @@
 			<artifactId>spring-security-web</artifactId>
 		</dependency>
 		
+		<!-- Spring batch -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.batch</groupId> -->
+<!-- 			<artifactId>spring-batch-core</artifactId> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.batch</groupId> -->
+<!-- 			<artifactId>spring-batch-infrastructure</artifactId> -->
+<!-- 		</dependency> -->
+		
 		<!-- Spring test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
