--- a/scb-pom/pom.xml
+++ b/scb-pom/pom.xml
@@ -14,6 +14,7 @@
 	<properties>
 		<spring-version>4.2.0.RELEASE</spring-version>
 		<spring-security.version>4.0.4.RELEASE</spring-security.version>
+<!-- 		<spring-batch.version>3.0.8.RELEASE</spring-batch.version> -->
 		<application.version>0.0.1-SNAPSHOT</application.version>
 		<slf4j-version>1.7.12</slf4j-version>
 		<logback.version>1.1.3</logback.version>
@@ -70,7 +71,19 @@
 				<artifactId>spring-security-web</artifactId>
 				<version>${spring-security.version}</version>
 			</dependency>
-	
+
+			<!-- Spring batch -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.springframework.batch</groupId> -->
+<!-- 				<artifactId>spring-batch-core</artifactId> -->
+<!-- 				<version>${spring-batch.version}</version> -->
+<!-- 			</dependency> -->
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.springframework.batch</groupId> -->
+<!-- 				<artifactId>spring-batch-infrastructure</artifactId> -->
+<!-- 				<version>${spring-batch.version}</version> -->
+<!-- 			</dependency> -->
+			
 			<!-- SLF4J -->
 			<dependency>
 				<groupId>org.slf4j</groupId>
