--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -14,6 +14,11 @@
 	</parent>
 
 	<dependencies>
+		<dependency>
+			<groupId>wojnar.bank</groupId>
+			<artifactId>fio-client</artifactId>
+		</dependency>
+			
 		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
