--- a/scb-data-service/.gitignore
+++ b/scb-data-service/.gitignore
@@ -8,3 +8,5 @@
 /src/main/resources/config/P3400343.properties
 /src/main/resources/config/pkbohumin.cz.properties
 /src/main/resources/config/smtp.properties
+/src/main/resources/config/jakub.zaoralek.properties
+/src/test/resources/jakub.zaoralek.properties
