process payments and tuning of payment list

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -135,6 +135,10 @@ txt.ui.common.ToPay=zbývá doplatit
 txt.ui.common.Refresh=Aktualizovat
 txt.ui.common.VarSymbol=Var. symbol
 txt.ui.common.ZUctu=Z účtu
+txt.ui.common.CisloUctu=Číslo účtu
+txt.ui.common.ZpravaProPrijemce=Zpráva pro příjemce
+txt.ui.common.Podrobnosti=Podrobnosti
+
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
