bank payment pairing

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -138,6 +138,8 @@ txt.ui.common.ZUctu=Z účtu
 txt.ui.common.CisloUctu=Číslo účtu
 txt.ui.common.ZpravaProPrijemce=Zpráva pro příjemce
 txt.ui.common.Podrobnosti=Podrobnosti
+txt.ui.common.Stahnout=Stáhnout
+txt.ui.common.Zparovat=Zpárovat
 
 
 txt.ui.month.0=Leden
@@ -209,6 +211,8 @@ msg.ui.quest.sendMailToUnregisteredParticipant=Odeslat upozorňující mail pro 
 msg.ui.title.sendMail=Odeslání mailu.
 msg.ui.error.invalidRequest=Neplatný požadavek.
 msg.ui.warn.userHaveRegisteredToCourse=Účastník {0} je již přihlášen do ročníku {1}/{2}. 
+msg.ui.info.bankPaymentProcessed.arg=Zpracováno "{0}" nových bankovních plateb.
+msg.ui.info.bankPaymentPaired.arg=Napárováno "{0}" bankovních plateb s platbami účastníků kurzů.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
