manual payment pairing

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -140,6 +140,8 @@ txt.ui.common.ZpravaProPrijemce=Zpráva pro příjemce
 txt.ui.common.Podrobnosti=Podrobnosti
 txt.ui.common.Stahnout=Stáhnout
 txt.ui.common.Zparovat=Zpárovat
+txt.ui.common.RucneZparovat=Ručně zpárovat
+txt.ui.common.ZparovaniPlatbyUcastnika=Zpárovnání platby účastníka [ {0} ]
 
 
 txt.ui.month.0=Leden
@@ -290,6 +292,7 @@ enum.PaymentType.DONATE=Sponzorský dar
 enum.PaymentType.OTHER=Jiný
 
 enum.PaymentProcessType.AUTOMATIC=Automaticky
+enum.PaymentProcessType.PAIRED=Ručně zpárováno
 enum.PaymentProcessType.MANUAL=Manuálně
 
 enum.CoursePaymentState.NO_PAYMENT=žádná platba
