email messaging to course participant list

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -142,6 +142,11 @@ txt.ui.common.Stahnout=Stáhnout
 txt.ui.common.Zparovat=Zpárovat
 txt.ui.common.RucneZparovat=Ručně zpárovat
 txt.ui.common.ZparovaniPlatbyUcastnika=Zpárovnání platby účastníka [ {0} ]
+txt.ui.common.NovaZprava=Nová zpráva
+txt.ui.common.Odeslat=Odeslat
+txt.ui.common.Predmet=Předmět
+txt.ui.common.Prijemcu=Příjemců
+txt.ui.common.SeznamPrijemcu=Seznam příjemců
 
 
 txt.ui.month.0=Leden
@@ -215,6 +220,8 @@ msg.ui.error.invalidRequest=Neplatný požadavek.
 msg.ui.warn.userHaveRegisteredToCourse=Účastník {0} je již přihlášen do ročníku {1}/{2}. 
 msg.ui.info.bankPaymentProcessed.arg=Zpracováno "{0}" nových bankovních plateb.
 msg.ui.info.bankPaymentPaired.arg=Napárováno "{0}" bankovních plateb s platbami účastníků kurzů.
+msg.ui.info.bankPaymentPaired.arg=Napárováno "{0}" bankovních plateb s platbami účastníků kurzů.
+msg.ui.info.messageSent=Zpráva byla odeslána.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
