participant application to course

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -42,6 +42,7 @@ txt.ui.common.ToDownloadApplication=Stáhnout přihlášku
 txt.ui.common.refreshData=Obnovit data
 txt.ui.common.name=Název
 txt.ui.common.description=Popis
+txt.ui.common.description2=Popis
 txt.ui.common.year=Rok
 txt.ui.common.participantCount=Účastníků
 txt.ui.common.lessonPerWeekCount=Lekcí týdně
@@ -67,6 +68,9 @@ txt.ui.common.landRegNo=Číslo popisné
 txt.ui.common.houseNo=Číslo orientační
 txt.ui.common.zipCode=PSČ
 txt.ui.common.configBasic=Základní nastavení
+txt.ui.common.courseLocations=Místa konání kurzů
+txt.ui.common.courseLocation=Místo konání kurzu
+txt.ui.common.courseLocation2=Místo konání
 txt.ui.common.swimStyleAdmin=Administrace stylů
 txt.ui.common.styles=Styly
 txt.ui.common.all=Vše
@@ -111,8 +115,8 @@ txt.ui.common.newCourseParticipant=Přihlásit nového účastníka
 txt.ui.common.forgottenPassword=Zapoměli jste heslo?
 txt.ui.common.unregisteredFrom=Nepřihlášeni z 
 txt.ui.common.sendWarnMail=Odeslat upozorňující mail
-txt.ui.common.priceSemester1=Cena první pololetí
-txt.ui.common.priceSemester2=Cena druhé pololetí
+txt.ui.common.priceSemester1=Cena pololetí I.
+txt.ui.common.priceSemester2=Cena pololetí II.
 txt.ui.common.Semester1=První pololetí
 txt.ui.common.Semester2=Druhé pololetí
 txt.ui.common.CZK=Kč
@@ -143,7 +147,8 @@ txt.ui.common.Odeslat=Odeslat
 txt.ui.common.Predmet=Předmět
 txt.ui.common.Prijemcu=Příjemců
 txt.ui.common.SeznamPrijemcu=Seznam příjemců
-
+txt.ui.common.MaxParticCount=Maximální počet účastníků
+txt.ui.common.CourseSelection=Výběr kurzu
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -182,6 +187,7 @@ msg.ui.validation.err.passwordNotDifferentThanPreviousOne=Neliší se od předch
 msg.ui.validation.err.notContainsNumber=Neobsahuje žádné číslo.
 msg.ui.validation.err.notContainsCapitalLetter=Neobsahuje velké písmeno.
 msg.ui.validation.err.usernameNotExists=Neplatný Email/Uživatelské jméno.
+msg.ui.validation.err.courseLocationUsed=Položku "{0}" nelze odstranit protože je použita v některém kurzu.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku "{0}"?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz "{0}"?
