participant application to course

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -149,6 +149,8 @@ txt.ui.common.Prijemcu=Příjemců
 txt.ui.common.SeznamPrijemcu=Seznam příjemců
 txt.ui.common.MaxParticCount=Maximální počet účastníků
 txt.ui.common.CourseSelection=Výběr kurzu
+txt.ui.common.Occupancy=Obsazenost
+txt.ui.common.occupied=obsazeno
 
 txt.ui.month.0=Leden
 txt.ui.month.1=Únor
@@ -189,6 +191,7 @@ msg.ui.validation.err.notContainsCapitalLetter=Neobsahuje velké písmeno.
 msg.ui.validation.err.usernameNotExists=Neplatný Email/Uživatelské jméno.
 msg.ui.validation.err.courseLocationUsed=Položku "{0}" nelze odstranit protože je použita v některém kurzu.
 msg.ui.warn.agreementWithHealtAndDataInfo=Před odesláním je potřeba potvrdit souhlas s kolektivním výcvikem a zpracováním osobních údajů.
+msg.ui.warn.courseIsFull=Vybraný kurz "{0}" je již obsazen.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku "{0}"?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz "{0}"?
 msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
