participant application to course

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -233,6 +233,10 @@ msg.ui.mail.courseApplication.text0=Dobrý den,
 msg.ui.mail.courseApplication.text1=děkujeme za podání přihlášky.
 msg.ui.mail.courseApplication.text2=Tým Plaveckého klubu Bohumín.
 
+msg.ui.mail.courseApplication.text3=Účastník: 
+msg.ui.mail.courseApplication.text4=Kurz:
+
+
 msg.ui.mail.subject.newApplication=Nová přihláška - plavecký kurz {0}
 msg.ui.mail.text.newApplication.text0=Prostřednictvím aplikace www.pkbohumin.cz byla přijata nová přihláška do plaveckého kurzu {0}.
 msg.ui.mail.text.newApplication.text1=Účastník (dítě): {0}
