remove club specific labes and move to configuration

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -169,11 +169,7 @@ txt.ui.internalError=Interní chyba aplikace
 txt.ui.internalErrorCaught=Nastala interní chyba aplikace, zpráva o výskytu chyby byla odeslána na emailovou adresu správce.
 txt.ui.ToClose=Zavřít
 
-txt.ui.application.healthAgreement=Souhlasím s kolektivním plaveckým výcvikem svého syna/dcery. Prohlašuji na základě lékařského posouzení zdravotního stavu, že můj syn/dcera je způsobilý/způsobilá absolvovat fyzickou zátěž sportovních tréninků a plaveckých závodů bez nebezpečí poškození jeho/jejího zdravotního stavu. V případě změny zdravotního stavu budu neprodleně informovat zástupce Plaveckého klubu Bohumín.
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
-txt.ui.application.personaldataProcessAgreement=Souhlasím se zpracováním osobních údajů podle zákona č. 101/2000 Sb.Souhlasím s možností fotografování svého syna/dcery a s možností zveřejnění fotografií nebo videa v rámci propagace Plaveckého klubu Bohumín. Potvrzuji, že jsem se seznámil s Provozním řádem 
-txt.ui.aquacentrumbohumin=aquacentra Bohumín
-txt.ui.url.aquacentrumbohumin=http://www.bospor.info/cz/aquacentrum-bohumin/provozni-rad-aqua/
 
 txt.ui.heading.learningCourse=Výuka kurzu {0}
 
@@ -231,23 +227,21 @@ msg.ui.info.messageSent=Zpráva byla odeslána.
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
 msg.ui.mail.courseApplication.text1=děkujeme za podání přihlášky.
-msg.ui.mail.courseApplication.text2=Tým Plaveckého klubu Bohumín.
 
 msg.ui.mail.courseApplication.text3=Účastník: 
 msg.ui.mail.courseApplication.text4=Kurz:
 
 
 msg.ui.mail.subject.newApplication=Nová přihláška - plavecký kurz {0}
-msg.ui.mail.text.newApplication.text0=Prostřednictvím aplikace www.pkbohumin.cz byla přijata nová přihláška do plaveckého kurzu {0}.
+msg.ui.mail.text.newApplication.text0=Byla přijata nová přihláška do plaveckého kurzu {0}.
 msg.ui.mail.text.newApplication.text1=Účastník (dítě): {0}
 msg.ui.mail.text.newApplication.text2=Zástupce: {0}
 
-msg.ui.mail.subject.newUserAdmin=Přístup do aplikace Plaveckého klubu Bohumín
+msg.ui.mail.subject.newUserAdmin=Přístup do aplikace sportovního klubu "{0}"
 msg.ui.mail.text.newUserAdmin.text0=Dobrý den,
-msg.ui.mail.text.newUserAdmin.text1=byl Vám zřízen přístup do webové aplikace Plaveckého klubu Bohumín www.pkbohumin.cz/pages/common/login.zul
+msg.ui.mail.text.newUserAdmin.text1=byl Vám zřízen přístup do webové aplikace sportovního klubu "{0}" {1}/pages/common/login.zul
 msg.ui.mail.text.newUserAdmin.text2=Uživatelské jméno: {0}
 msg.ui.mail.text.newUserAdmin.text3=Heslo: {0}
-msg.ui.mail.text.newUserAdmin.text4=Tým Plaveckého klubu Bohumín.
 
 msg.ui.mail.text.newUser.text0=Po přihlášení Vám aplikace umožňuje
 msg.ui.mail.text.newUser.text1=- aktualizovat vaše kontaktní údaje a údaje vámi přihlášených dětí
@@ -260,34 +254,16 @@ msg.ui.mail.text.newUser.text7=Přejeme pěkný den.
 
 msg.ui.mail.subject.resetPassword=Reset hesla
 msg.ui.mail.text.reset.text0=Dobrý den,
-msg.ui.mail.text.reset.text1=byl proveden reset přístupového hesla do aplikace www.pkbohumin.cz.
+msg.ui.mail.text.reset.text1=byl proveden reset přístupového hesla do aplikace {0}.
 msg.ui.mail.text.reset.text2=Uživatelské jméno: {0}
 msg.ui.mail.text.reset.text3=Nové heslo: {0}
-msg.ui.mail.text.reset.text4=Tým Plaveckého klubu Bohumín.
-
-# mail k zaveru sezony
-msg.ui.mail.endOfSeason.subject=Závěr sezóny 2016/2017
-msg.ui.mail.endOfSeason.text0=Dobrý den,
-msg.ui.mail.endOfSeason.text1=zasílám Vám informace k závěru sezóny 2016/2017:
-msg.ui.mail.endOfSeason.text2=- tréninky všech plaveckých skupin K, P, ZPB a ZPC končí dle rozvrhu v týdnu do pátku 16. června
-msg.ui.mail.endOfSeason.text3=- v úterý 20. června budou pro všechny výše zmiňované skupiny uspořádány klubové závody na bazénu v Bohumíně. Registrace 16:00-16:30, průběh 16:30-18:30
-msg.ui.mail.endOfSeason.text4=- skupina ZPA3 končí tréninkem ve čtvrtek 22. června v čase od 16:30-17:15
-msg.ui.mail.endOfSeason.text5=- skupiny ZPA1 a 2 končí v pátek 23. června společným tréninkem od 16:30 do 17:15
-msg.ui.mail.endOfSeason.text6=Informace k přihlášení na sezónu 2017/2018:
-msg.ui.mail.endOfSeason.text7=- v případě, že máte zájem aby Vaše dítě pokračovalo v plavání i příští školní rok, prosím o přihlášení do aplikace http://www.pkbohumin.cz/pages/common/login.zul a na řádku dítěte zmáčkněte Přihláška 2017/2018
-msg.ui.mail.endOfSeason.text8=- v případě zapomenutých přihlašovacích údajů použijte na stejné stránce odkaz ''Zapoměli jste heslo?''
-msg.ui.mail.endOfSeason.text9=- prosím o přihlášení do 30.6.2017
-msg.ui.mail.endOfSeason.text10=Za PK Bohumín přeji příjemně prožité letní dny 
-msg.ui.mail.endOfSeason.text11=S pozdravem
-msg.ui.mail.endOfSeason.text12=Adrian Kuder
 
 # mail neprihlaseni z predchozi sezony
 msg.ui.mail.unregisteredToCurrSeason.subject=Přihláška na ročník {0}
 msg.ui.mail.unregisteredToCurrSeason.text0=Dobrý den,
 msg.ui.mail.unregisteredToCurrSeason.text1=v případě, že máte zájem aby Vaše dítě {0} pokračovalo v plavání i příští školní rok, prosím klikněte na odkaz níže, kterým provedete přihlášení dítěte.
-msg.ui.mail.unregisteredToCurrSeason.text2=http://www.pkbohumin.cz/pages/public/prihlaska-ucastnik-pokracovani.zul?courseParticipant={0}&courseParticRepresentative={1}
+msg.ui.mail.unregisteredToCurrSeason.text2={0}/pages/public/prihlaska-ucastnik-pokracovani.zul?courseParticipant={1}&courseParticRepresentative={2}
 msg.ui.mail.unregisteredToCurrSeason.text3=S pozdravem
-msg.ui.mail.unregisteredToCurrSeason.text4=Tým Plaveckého klubu Bohumín.
 
 # Enums
 enum.DayOfWeek.MONDAY=pondělí
