add request to course participant representative to mail

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -227,10 +227,10 @@ msg.ui.info.messageSent=Zpráva byla odeslána.
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
 msg.ui.mail.courseApplication.text1=děkujeme za podání přihlášky.
-
 msg.ui.mail.courseApplication.text3=Účastník: 
 msg.ui.mail.courseApplication.text4=Kurz:
-
+msg.ui.mail.courseApplication.text5=Na první lekci kurzu prosíme přineste podepsaný přiložený dokument. 
+msg.ui.mail.courseApplication.text6=Na první lekci kurzu prosíme přineste podepsané přiložené dokumenty.
 
 msg.ui.mail.subject.newApplication=Nová přihláška - plavecký kurz {0}
 msg.ui.mail.text.newApplication.text0=Byla přijata nová přihláška do plaveckého kurzu {0}.
