add payment info to course application notification mail mail to course participant representative

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -231,6 +231,7 @@ msg.ui.mail.courseApplication.text3=Účastník:
 msg.ui.mail.courseApplication.text4=Kurz:
 msg.ui.mail.courseApplication.text5=Na první lekci kurzu prosíme přineste podepsaný přiložený dokument. 
 msg.ui.mail.courseApplication.text6=Na první lekci kurzu prosíme přineste podepsané přiložené dokumenty.
+msg.ui.mail.courseApplication.text7=Informace k platbě Vám budou zaslány v první polovině srpna {0}.
 
 msg.ui.mail.subject.newApplication=Nová přihláška - plavecký kurz {0}
 msg.ui.mail.text.newApplication.text0=Byla přijata nová přihláška do plaveckého kurzu {0}.
