change in course application

--- a/scb-data-service/.gitignore
+++ b/scb-data-service/.gitignore
@@ -7,6 +7,7 @@
 
 /src/main/resources/config/P3400343.properties
 /src/main/resources/config/pkbohumin.cz.properties
+/src/main/resources/config/sportologic.cz.properties
 /src/main/resources/config/smtp.properties
 /src/main/resources/config/jakub.zaoralek.properties
 /src/test/resources/jakub.zaoralek.properties
