change in label in course application

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -169,7 +169,7 @@ txt.ui.internalError=Interní chyba aplikace
 txt.ui.internalErrorCaught=Nastala interní chyba aplikace, zpráva o výskytu chyby byla odeslána na emailovou adresu správce.
 txt.ui.ToClose=Zavřít
 
-txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, popř. zdravotních obtížích
+txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, alergiích, nemocech, popř. jiných zdravotních obtížích
 
 txt.ui.heading.learningCourse=Výuka kurzu {0}
 
